--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
 
 .bs-docs-sidebar .nav > li > a {
   font-size:15px;
+  color: green;
 }
 .bs-docs-sidebar .nav .nav > li > a {
   font-size:14px;
