--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@
   margin-bottom:20px;
 }
 
+.table-striped{
+  font-size:72px;
+}
+
 .bs-docs-header h1, .bs-docs-header p {
   margin-right:0px;
 }
